[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/enemy4.gd" type="Script" id=1]
[ext_resource path="res://Textures/enemies/4/Ghost4.png" type="Texture" id=2]
[ext_resource path="res://Textures/enemies/4/Ghost12.png" type="Texture" id=3]
[ext_resource path="res://Textures/enemies/4/Ghost13.png" type="Texture" id=4]
[ext_resource path="res://Textures/enemies/4/Ghost14.png" type="Texture" id=5]
[ext_resource path="res://Textures/enemies/4/Ghost15.png" type="Texture" id=6]
[ext_resource path="res://Textures/enemies/4/Ghost8.png" type="Texture" id=7]
[ext_resource path="res://Textures/enemies/4/Ghost9.png" type="Texture" id=8]
[ext_resource path="res://Textures/enemies/4/Ghost10.png" type="Texture" id=9]
[ext_resource path="res://Textures/enemies/4/Ghost11.png" type="Texture" id=10]
[ext_resource path="res://Textures/enemies/4/Ghost5.png" type="Texture" id=11]
[ext_resource path="res://Textures/enemies/4/Ghost6.png" type="Texture" id=12]
[ext_resource path="res://Textures/enemies/4/Ghost7.png" type="Texture" id=13]
[ext_resource path="res://Sounds/ghost_stroller.wav" type="AudioStream" id=14]


[sub_resource type="CapsuleShape2D" id=1]
radius = 41.2505
height = 66.5726

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_no_char"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_no_char"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle_no_char"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "walk"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle_no_char"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "walk_no_char"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_no_char"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "walk"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "walk_no_char"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = Vector2( 0, 0 )
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 9 )
blend_point_3/pos = Vector2( -1, 1 )
blend_point_4/node = SubResource( 10 )
blend_point_4/pos = Vector2( -1, -1 )
blend_point_5/node = SubResource( 11 )
blend_point_5/pos = Vector2( 0, -1 )
blend_point_6/node = SubResource( 12 )
blend_point_6/pos = Vector2( 1, 1 )
blend_point_7/node = SubResource( 13 )
blend_point_7/pos = Vector2( 1, 0 )
blend_point_8/node = SubResource( 14 )
blend_point_8/pos = Vector2( 1, -1 )
snap = Vector2( 0.2, 0.2 )
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id=16]
nodes/idle_walk/node = SubResource( 15 )
nodes/idle_walk/position = Vector2( 440, 60 )
nodes/output/position = Vector2( 840, 40 )
node_connections = [ "output", 0, "idle_walk" ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 379.58, 86.195 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 57.9105, 56.7196 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 207.979, 85.439 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 544.559, 99.4841 )

[node name="enemy4" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 8
collision_mask = 64
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.614716, 53.2294 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.509804 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/idle_no_char = SubResource( 3 )
anims/walk = SubResource( 4 )
anims/walk_no_char = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/idle_walk/blend_position = Vector2( 0, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2Dwalk_player" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dwalk_player"]
shape = SubResource( 17 )

[node name="Area2Dplayer_death" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dplayer_death"]
shape = SubResource( 18 )

[node name="Area2Dattakck_player" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dattakck_player"]
shape = SubResource( 19 )

[node name="Area2D_act_out" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_act_out"]
shape = SubResource( 20 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 53 )
stream = ExtResource( 14 )
max_distance = 390.0
bus = "ghost wheel"

[connection signal="body_entered" from="Area2Dwalk_player" to="." method="_on_Area2Dwalk_player_body_entered"]
[connection signal="body_exited" from="Area2Dwalk_player" to="." method="_on_Area2Dwalk_player_body_exited"]
[connection signal="body_entered" from="Area2Dplayer_death" to="." method="_on_Area2Dplayer_death_body_entered"]
[connection signal="body_entered" from="Area2Dattakck_player" to="." method="_on_Area2Dattakck_player_body_entered"]
[connection signal="body_exited" from="Area2Dattakck_player" to="." method="_on_Area2Dattakck_player_body_exited"]
[connection signal="body_entered" from="Area2D_act_out" to="." method="_on_Area2D_act_out_body_entered"]
[connection signal="body_exited" from="Area2D_act_out" to="." method="_on_Area2D_act_out_body_exited"]
